# alfontal.dev

./: .gitignore  .impeccable.md  CNAME  LICENSE  README.md  blog.html  index.html  listings.json  projects.html  publications.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: framework-build.yml  framework-deploy.yml  quarto-render-deploy.yml  web-build.yml  web-deploy.yml
framework/: README.md  package-lock.json  package.json
framework/scripts/: render-notebooks.mjs
framework/src/: content.config.ts
notebooks/: _quarto.yml
notebooks/_includes/: footer.html  head.html  header.html
notebooks/guess_who/: guess_who.ipynb
notebooks/kd-tokyo-air-sources/: kd_tokyo_air_sources.qmd  references.bib
notebooks/quarto-regression/: quarto_regression.ipynb  references.bib
notebooks/world-population/: world_pop_densities.ipynb
posts/first-post/: index.html
posts/guess_who/: guess_who.html
posts/japan-trip/: index.html
posts/world-population/: world_pop_densities.html
publications/articles/: fontal2021.html  fontal2025.html  pozdniakova2025.html  rodo2023.html  rodo2024.html  rodofontal2021.html  thesis2017.html  vasculitis2022.html
site/: .gitignore  _quarto.yml  blog.qmd  index.qmd  projects.qmd  publications.qmd  style.scss
site/ejs/: article.ejs
site/posts/: _metadata.yml
site/projects/: _metadata.yml
site_libs/bootstrap/: bootstrap-05223a4c700e494bd675f744c8ef1a15.min.css  bootstrap-08137eba906d0b986e663a6c85b4d6f2.min.css  bootstrap.min.css  (+6 more)
web/: README.md  astro.config.mjs  package-lock.json  package.json
(+49 files in other folders)
